@@ -4,11 +4,12 @@
     <property name="project.longname" value="Instinct Behaviour Driven Development (BDD) Framework"/>
     <property name="project.shortname" value="instinct"/>
     <property name="project.version.major" value="0"/>
-    <property name="project.version.minor" value="0.1"/>
+    <property name="project.version.minor" value="1.0"/>
     <property name="version-status" value=""/>
     <property name="project.version.full" value="${project.version.major}.${project.version.minor}${version-status}"/>
     <property name="project.jar" value="${project.shortname}-${project.version.full}.jar"/>
     <property name="project.zip" value="${project.shortname}-${project.version.full}.zip"/>
+    <property name="javadoc.zip" value="${project.shortname}-${project.version.full}-javadoc.zip"/>
     <property name="main.package.name" value="com.googlecode.instinct"/>
 
     <property name="build.dir" value="build"/>
