@@ -1,3 +1,11 @@
 * Instinct Release 0.1.0 *
 
 o Initial public release.
+  o Support for running specifications (based on annotations), effectively
+    providing simple JUnit 3.8.x feature parity.
+  o Core annotation support - BehaviourContext, Specification, BeforeSpecification,
+    AfterSpecification.
+  o Ant task.
+  o Specifications are located based on annotations.
+  o Simplified mocking API, build on jMock 1.1.
+  o Simple Verification class (will change in future releases).
